--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,5 +23,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'England -- Fiction'
 - !lcc 'PR'
+- GITenberg
 title: Christopher Hibbault, Roadmaker
 url: http://www.gutenberg.org/ebooks/28309
